--- a/RoutePlan.html
+++ b/RoutePlan.html
@@ -83,29 +83,56 @@
             border-radius: 8px;
             box-sizing: border-box;
             font-family: 'Roboto', sans-serif;
+            padding-right: 40px; /* Espace pour le bouton d'effacement */
         }
-        .copy-btn {
+        /* Style général des boutons d'action dans l'input (Copier et Effacer) */
+        .input-action-btn {
             background: none;
             border: none;
             cursor: pointer;
             position: absolute;
-            right: 10px;
             padding: 5px;
             border-radius: 5px;
             transition: background-color 0.2s ease;
+            top: 50%;
+            transform: translateY(-50%);
         }
-        .copy-btn:hover {
+        .input-action-btn:hover {
             background-color: #e9ecef;
         }
-        .copy-btn svg {
+        .input-action-btn svg {
             width: 20px;
             height: 20px;
             color: #555;
         }
-        textarea {
-            resize: vertical;
-            min-height: 200px;
+        
+        /* Bouton Copier: à droite, après le bouton Effacer (si présent) */
+        .copy-btn {
+            right: 5px; /* Décalage pour le bouton Copier */
         }
+
+        /* Bouton Effacer: positionné plus à gauche */
+        .clear-btn {
+            right: 35px; /* Décalage pour le bouton Effacer */
+            z-index: 10;
+            opacity: 0.7;
+        }
+
+        /* Styles spécifiques pour le textarea */
+        .form-group-textarea .input-container {
+            position: relative;
+        }
+        .form-group-textarea textarea {
+            padding-right: 35px; /* Espace pour le bouton d'effacement du textarea */
+            min-height: 200px;
+            resize: vertical;
+        }
+        .form-group-textarea .clear-btn {
+            right: 5px; 
+            top: 15px; /* Ajustement pour le haut de la zone de texte */
+            transform: translateY(0);
+        }
+
         .btn-generate {
             display: block;
             width: 100%;
@@ -134,7 +161,7 @@
         }
         .route-plan li {
             margin-bottom: 1rem;
-            font-size: 0.85rem; /* Font size made smaller */
+            font-size: 0.85rem; 
         }
         .route-link {
             display: block;
@@ -227,7 +254,14 @@
                 </svg>
                 <div class="input-container">
                     <input type="text" id="startAddress" placeholder="Adresse de départ (p. ex., Paris, France)" value="5 rue victor considérant 75014 paris">
-                    <button class="copy-btn" data-target-id="startAddress">
+                    <button class="input-action-btn clear-btn" data-target-id="startAddress">
+                        <!-- Clear Icon (X/Close) -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+                        </svg>
+                    </button>
+                    <button class="input-action-btn copy-btn" data-target-id="startAddress">
+                        <!-- Copy Icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
                         </svg>
@@ -241,8 +275,15 @@
                     <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                 </svg>
                 <div class="input-container">
-                    <input type="text" id="destinationAddress" placeholder="Adresse de destination (p. ex., Rome, Italie)" value="16, Avenue des Gobelins, Quartier du Jardin des Plantes - Paris , Paris 5">
-                    <button class="copy-btn" data-target-id="destinationAddress">
+                    <input type="text" id="destinationAddress" placeholder="Adresse de destination (p. ex., Rome, Italie)" value="2 place d'aligre 75011 paris">
+                    <button class="input-action-btn clear-btn" data-target-id="destinationAddress">
+                        <!-- Clear Icon (X/Close) -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+                        </svg>
+                    </button>
+                    <button class="input-action-btn copy-btn" data-target-id="destinationAddress">
+                        <!-- Copy Icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
                         </svg>
@@ -252,7 +293,15 @@
 
             <div class="form-group-textarea">
                 <label for="otherStops">Stops</label>
-                <textarea id="otherStops" placeholder="p. ex.,&#10;Lyon, France&#10;Genève, Suisse&#10;Milan, Italie"></textarea>
+                <div class="input-container">
+                    <textarea id="otherStops" placeholder="p. ex.,&#10;Lyon, France&#10;Genève, Suisse&#10;Milan, Italie"></textarea>
+                    <button class="input-action-btn clear-btn" data-target-id="otherStops">
+                        <!-- Clear Icon (X/Close) -->
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+                        </svg>
+                    </button>
+                </div>
             </div>
 
             <button class="btn-generate" id="generateBtn">Make Roadmap</button>
@@ -291,6 +340,7 @@
             const dateInfo = document.getElementById('dateInfo');
             const weatherInfo = document.getElementById('weatherInfo');
             const copyButtons = document.querySelectorAll('.copy-btn');
+            const clearButtons = document.querySelectorAll('.clear-btn'); // Sélectionner les nouveaux boutons
             const monthsAbbr = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
 
             const showMessage = (message, type = 'warning') => {
@@ -368,10 +418,19 @@
                         });
 
                         if (!response.ok) {
-                            if (response.status === 401 || response.status === 403) {
-                                throw new Error('API key missing or invalid');
+                            // On gère l'erreur de manière plus élégante sans lancer d'erreur de la console.
+                            weatherInfo.innerHTML = `
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M19.35 10.04C18.91 7.21 16.59 5 13.75 5c-2.4 0-4.44 1.72-4.91 4.02C5.9 9.69 4 11.81 4 14c0 3.31 2.69 6 6 6h8c2.21 0 4-1.79 4-4 0-2.09-1.54-3.8-3.65-3.96zM18 18h-8c-2.21 0-4-1.79-4-4s1.79-4 4-4 4-1.79 4-4V6h2c1.1 0 2 .9 2 2h0c0 1.1-.9 2-2 2h-1c-1.1 0-2 .9-2 2z"/>
+                                </svg>
+                                <span>Météo non disponible.</span>
+                            `;
+                            // On affiche un message d'erreur si c'est la première tentative et que la clé API n'est pas valide
+                            if (retries === 0 && (response.status === 401 || response.status === 403)) {
+                                showMessage("Erreur de l'API : Clé d'API manquante ou invalide. Veuillez l'ajouter dans le code.", 'warning');
                             }
-                            throw new Error(`API call failed with status: ${response.status}`);
+                            // Pas de "throw" pour ne pas spammer la console avec des erreurs non-fatales.
+                            return; 
                         }
 
                         const result = await response.json();
@@ -387,12 +446,8 @@
                             return;
                         }
                     } catch (error) {
-                        console.error('Error fetching weather:', error);
-                        if (error.message.includes('API key')) {
-                             showMessage("Erreur de l'API : Clé d'API manquante ou invalide. Veuillez l'ajouter dans le code.", 'warning');
-                        } else {
-                             showMessage("Erreur lors du chargement de la météo.", 'warning');
-                        }
+                        console.error('Erreur lors de la récupération de la météo:', error);
+                        showMessage("Erreur lors du chargement de la météo.", 'warning');
                     }
                     retries++;
                     await new Promise(res => setTimeout(res, Math.pow(2, retries) * 1000));
@@ -414,13 +469,28 @@
                 showMessage('Adresse copiée!', 'success');
             };
 
+            const clearText = (elementId) => {
+                const element = document.getElementById(elementId);
+                element.value = '';
+                showMessage('Champ effacé!', 'success');
+            };
+
             setWeekendDate();
             fetchWeather();
             
+            // Écouteur d'événement pour les boutons de copie
             copyButtons.forEach(button => {
                 button.addEventListener('click', () => {
                     const targetId = button.getAttribute('data-target-id');
                     copyText(targetId);
+                });
+            });
+
+            // Écouteur d'événement pour les boutons d'effacement
+            clearButtons.forEach(button => {
+                button.addEventListener('click', () => {
+                    const targetId = button.getAttribute('data-target-id');
+                    clearText(targetId);
                 });
             });
 
